--- a/overlay/frameworks/base/core/res/res/values/strings.xml
+++ b/overlay/frameworks/base/core/res/res/values/strings.xml
@@ -14,5 +14,5 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Do not translate. Default access point SSID used for tethering -->
-    <string name="wifi_tether_configure_ssid_default" translatable="false">Redmi 6 pro</string>
+    <string name="wifi_tether_configure_ssid_default" translatable="false">Mi A2 Lite</string>
 </resources>
